package pt.ipp.isep.dei.esoft.project.repository;

import pt.ipp.isep.dei.esoft.project.domain.GreenSpace;

import java.util.List;

public class GreenSpaceRepository {
    List<GreenSpace> greenSpaceList;
}
