@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getGreenSpaceRepository()
}

class RegisterGreenSpaceController {
    + RegisterGreenSpaceController(greenSpaceRepository)
    + registerGreenSpace(name, type, area)
}

class GreenSpaceRepository{
    + registerGreenSpace(name, type, area)
    + addGreenSpace(greenSpace)
    + validateGreenSpace(greenSpace)
    + getGreenSpaceList()
}

class RegisterGreenSpaceUI {
}

class GreenSpace{
    - String name
    - String type
    - Double area
}

Repositories -> Repositories : instance

RegisterGreenSpaceUI .> RegisterGreenSpaceController
RegisterGreenSpaceController .> "1" greenSpaceRepository : greenSpaceRepository

Repositories --> "1" greenSpaceRepository

RegisterGreenSpaceController .> Repositories : repositories

greenSpaceRepository "1" o--- "1..*"GreenSpace : has

RegisterGreenSpaceController .> GreenSpace : greenSpace

@enduml
